fix cmakelist but isnt a test for this

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_COMPILER "/usr/bin/g++")
-project(tarea2)
+project(tarea3)
 
 
 set(CMAKE_CXX_STANDARD 11)
@@ -16,5 +16,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 #add_subdirectory(src)
 #add_subdirectory(tests)
 
-add_executable(tarea2 main.cpp src/node.cpp src/stack.cpp src/queue.cpp)
-target_include_directories(tarea2 PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_executable(tarea2 main.cpp trees/src/tree.cpp trees/src/treeList.cpp trees/src/treeNode.cpp)
+target_include_directories(tarea3 PUBLIC ${PROJECT_SOURCE_DIR}/include)
